Containers/k8s/podmanifest.yml
apiVersion: v1
kind: Pod
metadata:
  name: kaka
  namespace: demo
spec: # specification
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
