Containers/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: demo # Specify the namespace where the service will be created     
spec:
  selector:
    app: nginx-demo # This should match the label of the pods you want to expose
  ports:
    - protocol: TCP
      port: 80 # The port that the service will expose
      targetPort: 80 # The port on the pod that the service will forward traffic to
