Containers/k8s/denyall.yml
apiVersion: networking.k8s. io/v1
kind: NetworkPolicy 
metadata:
  name: deny-all 
  namespace: demo 
spec:
  podSelector: 
    matchLabels:
     app: nginx-demo
policyTypes:
- Ingress
